--- a/Project_cluster.ipynb
+++ b/Project_cluster.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Predicting U.S. Locations Based on Energy Consumption Patterns Using AI**"
+        "# **Clustering U.S. Communities Based on Energy Consumption Patterns Using Machine Learning**"
       ],
       "metadata": {
         "id": "OZVIjrm8AKqt"
